--- a/hello/pyproject.toml
+++ b/hello/pyproject.toml
@@ -14,6 +14,7 @@ say-hello = "hello.scripts.say_hello:main"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.16.1"
+flake8 = "^6.1.0"
 
 [build-system]
 requires = ["poetry-core"]
